gccida/c0/ix86_expand_sse_comi
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12188:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison; // [rsp+34h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12189:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode1; // [rsp+38h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12190:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+3Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12193:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg1; // [rsp+58h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12201:33: error: use of undeclared identifier 'insn_data_0'
mode0 = *( ( unsigned __int16 *)insn_data_0[d->icode].operand + 8); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12202:34: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
mode1 = *( ( unsigned __int16 *)&insn_data_0[d->icode].operand[1] + 8); 
                                 ^~~~~~~~~~~
                                 insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12204:43: error: use of undeclared identifier 'insn_data_0'
if ( mode_class_0[*( ( unsigned __int16 *)insn_data_0[d->icode].operand + 8)] == MODE_VECTOR_INT 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12204:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int16 *)insn_data_0[d->icode].operand + 8)] == MODE_VECTOR_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12205:41: error: use of undeclared identifier 'insn_data_0'
|| mode_class_0[*( ( unsigned __int16 *)insn_data_0[d->icode].operand + 8)] == MODE_VECTOR_FLOAT ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12205:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int16 *)insn_data_0[d->icode].operand + 8)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12209:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode1] == MODE_VECTOR_INT || mode_class_0[mode1] == MODE_VECTOR_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12209:48: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode1] == MODE_VECTOR_INT || mode_class_0[mode1] == MODE_VECTOR_FLOAT ) 
                                               ^~~~~~~~~~~~
                                               mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12220:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[d->icode].operand->predicate( op0, mode0) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12220:47: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[d->icode].operand->predicate( op0, mode0) ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12222:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[d->icode].operand[1].predicate( op1, mode1) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12222:49: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[d->icode].operand[1].predicate( op1, mode1) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12225:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[d->icode].genfun( op0, op1, v3); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/i386.c:12225:35: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[d->icode].genfun( op0, op1, v3); 
                                  ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_sse_comi/src/obj/i386.o] Error 1
